--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,5 +77,9 @@
         "codecvt": "cpp",
         "regex": "cpp",
         "future": "cpp"
-    }
+    },
+    "editor.formatOnSave": true,
+    "editor.insertSpaces": true,
+    "files.insertFinalNewline": true,
+    "files.trimFinalNewlines": true
 }
